--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,7 @@ h6 {
 #home {
   width: 100%;
   height: 100vh;
-  background: url("../img/homepage.jpeg") top center;
+  /* background: url("../img/homepage.jpeg") top center; */
   /* background: url("../img/bg.jpg") top center; */
   background-size: cover;
   position: relative;
