--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,12 +135,12 @@ h6 {
 }
 
 #header .logo {
-  font-size: 32px;
   margin: 0;
   padding: 0;
   line-height: 1;
   font-weight: 700;
   letter-spacing: 2px;
+  font-size: x-large;
 }
 
 #header .logo a {
@@ -461,6 +461,12 @@ h6 {
   line-height: 56px;
   color: #fff;
 }
+
+/* id header id nav-header-text needs to remove all css styling
+#home h1 a #header #nav-header-text {
+  color: #fff;
+  text-decoration: none;
+} */
 
 #home h2 {
   color: #eee;
