--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,8 +432,6 @@ h6 {
 #home {
   width: 100%;
   height: 100vh;
-  /* background: url("../img/homepage.jpeg") top center; */
-  /* background: url("../img/bg.jpg") top center; */
   background-size: cover;
   position: relative;
   padding: 0;
@@ -534,7 +532,7 @@ h6 {
 #homeLinks {
   width: 100%;
   height: 60vh;
-  background: url("../img/mars2.jpg") top center;
+  background: url("../img/mars.jpg") top center;
   background-size: cover;
   position: relative;
   padding: 0;
@@ -542,7 +540,6 @@ h6 {
 
 #homeLinks:before {
   content: "";
-  /*background: rgba(13, 20, 26, 0.7);*/
   background: #082e4db0;
   position: absolute;
   bottom: 0;
@@ -843,7 +840,7 @@ section {
 .about-boxes .card-title {
   font-weight: 700;
   text-align: center;
-  border-bottom: #116eba 1px dashed;
+  border-bottom: #116eba 1px solid;
 }
 
 .about-boxes .card-title a {
